Fix UI screen overflow, decimal functionality

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+
+
+
 body, container {
     display: flex;
     justify-content: center;
@@ -20,7 +23,7 @@ body, container {
 #title {
     display: flex;
     align-self: center;
-    padding: 1em 1em 0 1em;
+    padding: 1em 2.5em 0 2.5em;
     font-size: 1.8em;
     color: #cc6600;
 }
@@ -60,6 +63,7 @@ body, container {
     justify-content: center;
     align-items: center;
     height: 100%;
+    margin-bottom: 1em;
 }
 
 .key {
